kubernetes/apps/external-reverse-proxy/overlays/prod/ingress-route-infra-bcm.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: infra-bcm-ingress
  namespace: infra
  annotations:
    external-dns.kubernetes.io/target: infra-bcm
spec:
  entryPoints:
    # - websecure - internal access goes directly.
    - websecure-ext
  routes:
    - match: Host(`infra-bcm.sobrinho.pt`)
      kind: Rule
      services:
        - name: infra-bcm
          port: 443
          scheme: https
          serversTransport: traefik-transport-insecure@kubernetescrd
  tls:
    secretName: infra-bcm-cert
