kubernetes/apps/external-reverse-proxy/overlays/prod/ingress-route-infra-vm.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: infra-vm-ingress
  namespace: infra
  annotations:
    external-dns.kubernetes.io/target: infra-vm
spec:
  entryPoints:
    # - websecure Only external. Internal access goes directly.
    - websecure-ext
  routes:
    - match: Host(`infra-vm.sobrinho.pt`)
      kind: Rule
      services:
        - name: infra-vm
          port: 8006
          scheme: https
          serversTransport: traefik-transport-insecure@kubernetescrd
  tls:
    secretName: infra-vm-cert
