kubernetes/apps/external-reverse-proxy/overlays/prod/ingress-route-unifi.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: unifi-ingress
  namespace: infra
  annotations:
    external-dns.kubernetes.io/target: unifi
spec:
  entryPoints:
    # - websecure Only external. Internal access goes directly.
    - websecure-ext
  routes:
    - match: Host(`unifi.sobrinho.pt`)
      kind: Rule
      services:
        - name: unifi
          port: 443
          scheme: https
          serversTransport: traefik-transport-insecure@kubernetescrd
  tls:
    secretName: unifi-cert
